# parq-cli

./: .gitignore  AGENTS.md  CLAUDE.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.en.md  README.md  README.zh.md  README_CN.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
.tmp-bench/: csv-small.csv  parquet-small.parquet
.trellis/: .template-hashes.json
.trellis/spec/: README.md
.trellis/spec/backend/: config-logging.md  database-when-added.md  directory-structure.md  http-api-when-added.md  index.md  python-package.md  testing.md  type-safety.md
.trellis/spec/big-question/: index.md  large-file-streaming.md  output-contracts.md  release-publish-boundary.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  index.md  pre-implementation-checklist.md  review-checklist.md  task-flow.md
.trellis/spec/shared/: code-quality.md  dependencies.md  index.md  project-docs.md  verification.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
docs/: QUICKSTART.md  RELEASE.md
examples/: README.md  create_sample_data.py
parq/: __init__.py  __main__.py  cli.py  output.py  plain_output.py  reader.py
parq/formats/: __init__.py  _chunk_writers.py  _common.py  _csv.py  _parquet.py  _xlsx.py
scripts/: README.md  bump_version.py  check_version.py  performance_benchmark.py  publish.sh
tests/: conftest.py  test_check_version.py  test_cli.py  test_main_entry.py  test_output.py  test_package_meta.py  test_performance.py  test_plain_output.py  test_reader.py  test_release_scripts.py  test_workflows.py
