[project]
name = "parq-cli"
version = "0.1.9"
description = "A powerful command-line tool for inspecting tabular files like Parquet, CSV, and XLSX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=18.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
]
authors = [
    {name = "SimonSun", email = "sjf19981112@gmail.com"}
]
license = {text = "MIT"}
keywords = ["parquet", "cli", "data", "analytics", "apache-parquet", "data-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Tendo33/parq-cli"
Repository = "https://github.com/Tendo33/parq-cli"
Issues = "https://github.com/Tendo33/parq-cli/issues"
Documentation = "https://github.com/Tendo33/parq-cli#readme"

[project.scripts]
parq = "parq.cli:app"

[project.optional-dependencies]
xlsx = [
    "openpyxl>=3.1.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.7.0",
    "twine>=5.1.0",
    "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parq"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
markers = [
    "performance: performance comparison tests for parquet datasets",
]
